    - Fixed zooming of arc segments
    - Added type annotations
    - Added `Drawing.move` method for moving cursor by dx and dy.
    - Drawing class implements += operator, so elements can be added by `Drawing += Element()`
    - Removed dependency on Numpy.

    - New Elements:
        - CPE (Constant Phase Element)
        - Varactor
        - FuseIEEE
        - FuseIEC
    
    - Deprecations:
        - `Element.add_label` is deprecated (use `Element.label`)
        - `Drawing.loopI` is deprecated (add a `LoopCurrent` element)
        - `Drawing.labelI` is deprecated (add a `CurrentLabel` element)
        - `Drawing.labelI_inline` is deprecated (add a `CurrentLabelInline` element)



v0.8 - 15-Aug-2020

    - Changed Header anchors to `pinN` for consistency with Ic.
    - Improved label placement with respect to anchor positions.
    - Prevent duplicate figures from showing in Jupyter Element representation
    - Improvements for headless server operation to prevent popup window
    - Added some undocumented features to documentation
    - Added `Drawing.get_imagedata` function for returning raw image bytes
    - Fixed pip installation issue with module capitalization. Must import lowercase `schemdraw`.


v0.7.1 - 26-Jun-2020

    - Bug fix: restore usage outside of Jupyter, so that Matplotlib window is shown when calling Drawing.draw().


v0.7 - 21-Jun-2020

    - Dropped support for Python 2. Now requires 3.7+.
    - Elements are now subclasses of Element. Previous (dict) element names are translated into
      new class names. Any user-defined elements will need to be converted to classes.
      The `group_elements` function is replaced with `ElementDrawing` class.      
    - Allow `fontsize` or `size` keyword arguments interchangeably in Drawing and add_label
    - Updated flow.Decision to use keyword arguments for labeling decision branches
    - The Ic element label offset parameter changed from `lblofst` to `lofst` 